Updated project with new features and fixes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </footer>
 
     <script src="js/script.js"></script>  <!-- General JavaScript -->
-    <!-- <script src="js/chat.js"></script>    WhatsApp Chat Script -->
+    <script src="js/chat.js"></script>    <!--WhatsApp Chat Script-->
     
 
 </body>
